doc/k8s/3.redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis3
  namespace: hiauth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis3
    spec:
      containers:
      - image: redis:3
        name: redis3
        ports:
        - containerPort: 6379
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: redis3
  namespace: hiauth
spec:
  ports:
  - port: 6379
    targetPort: 6379
    #nodePort: 16379
  selector:
    app: redis3
  type: NodePort
