doc/k8s/4.mysql.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hiauth
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: http
    nodePort: 13306
  selector:
    name: mysql-pod
