doc/k8s/6.hi-mall-microsvr-goods.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hi-mall-microsvr-goods
  namespace: hiauth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hi-mall-microsvr-goods
    spec:
      containers:
      - image: registry.tfit.com/hiauth/hi-mall-microsvr-goods:1.0.0-SNAPSHOT
        name: hi-mall-microsvr-goods
        ports:
        - containerPort: 8281
      imagePullSecrets:
      - name: registry-tfit-secret

---

apiVersion: v1
kind: Service
metadata:
  name: hi-mall-microsvr-goods
  namespace: hiauth
spec:
  ports:
  - port: 8281
    targetPort: 8281
    #nodePort: 18281
  selector:
    app: hi-mall-microsvr-goods
  #type: NodePort
