doc/k8s/8.hi-mall-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hi-mall-web
  namespace: hiauth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hi-mall-web
    spec:
      containers:
      - image: registry.tfit.com/hiauth/hi-mall-web:1.0.0-SNAPSHOT
        name: hi-mall-web
        ports:
        - containerPort: 8182
      imagePullSecrets:
      - name: registry-tfit-secret

---

apiVersion: v1
kind: Service
metadata:
  name: hi-mall-web
  namespace: hiauth
spec:
  ports:
  - port: 8182
    targetPort: 8182
    nodePort: 18182
  selector:
    app: hi-mall-web
  type: NodePort
